src/test/deca/context/valid/106_classeFieldClass.deca
// Description:
//    Programme minimaliste: une classe pas très utile avec un champ de type A.
//
// Historique:
//    cree le 01/01/2022

class A {
}

class B {
	A a;
}
