src/test/deca/context/invalid/17_classeIdent.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 14: ContextualError: class a not defined
// 
// Historique:
//    cree le 01/01/2022

class A {
}
{
   // Doit etre refuse.
   A a = new a();
}
